--- a/src/frontend/src/app/main/main.component.html
+++ b/src/frontend/src/app/main/main.component.html
@@ -12,8 +12,8 @@
       <input id="dropzone-file" type="file" class="hidden" />
   </label>
   
-  <span class="text-base font-extrabold md:text-1xl lg:text-2xl text-gray-900 dark:text-white mt-20 mb-5 w-9/12">The odds of the Millennium Falcon reaching Endor are</span>
-  <div class="w-9/12 bg-gray-200 rounded-full dark:bg-gray-700">
-    <div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: 45%"> 45%</div>
+  <span *ngIf="odds != -1" class="text-base font-extrabold md:text-1xl lg:text-2xl text-gray-900 dark:text-white mt-20 mb-5 w-9/12">The odds of the Millennium Falcon reaching Endor are</span>
+  <div *ngIf="odds != -1" class="w-9/12 bg-gray-200 rounded-full dark:bg-gray-700">
+    <div class="bg-blue-600 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" [ngStyle]="{'width': this.odds}">{{odds}}%</div>
   </div>
 </div>
